Bug 443764 - kscreen: 1366x768 is listed as 683:384 aspect ratio
Summary: kscreen: 1366x768 is listed as 683:384 aspect ratio
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 5.23.0
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-15 06:23 UTC by GerbilSoft
Modified: 2022-04-12 04:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description GerbilSoft 2021-10-15 06:23:41 UTC
Many laptops still have a 1366x768 display. These should be considered 16:9, but due to the unusual width, KScreen calculates the aspect ratio as 683:384.

Similar display resolutions that should be considered 16:9, but are displayed weirdly:
- 1360x768: displayed as 85:48
- 1368x768: displayed as 57:32


STEPS TO REPRODUCE
1. Use a laptop with 1366x768 display, and/or connect a 1360/1366/1368x768 display.
2. Open Display Configuration.

OBSERVED RESULT
Aspect ratio is listed as 683:384, 85:48, or 57:32.

EXPECTED RESULT
Aspect raito should be listed as 16:9, even though it isn't exactly 16:9.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Gentoo amd64
KDE Plasma Version: 5.23.0
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-10-15 16:59:18 UTC
lol
Comment 2 Felipe Kinoshita 2022-04-11 14:00:58 UTC
Git commit 15056b996116c2ec5fb51c89dc501758f4e3a5f7 by Felipe Kinoshita.
Committed on 11/04/2022 at 01:03.
Pushed by fhek into branch 'master'.

Prefer more common aspect ratios over correct math

Even though "43:18" or "683:384" are technically correct it's way
more common to see "21:9" and "16:9", so let's display the more
usual aspect ratios to the user.

M  +4    -0    kcm/output_model.cpp

https://invent.kde.org/plasma/kscreen/commit/15056b996116c2ec5fb51c89dc501758f4e3a5f7