Prefer more common aspect ratios over correct math

Even though "43:18" or "683:384" are technically correct it's way
more common to see "21:9" and "16:9", so let's display the more
usual aspect ratios to the user.

BUG: 443764